--- a/site/package.json
+++ b/site/package.json
@@ -26,7 +26,8 @@
     "@vssue/api-github-v3": "^1.4.0",
     "@vssue/vuepress-plugin-vssue": "^1.4.2",
     "dotenv": "^8.2.0",
-    "vuepress": "^1.3.0"
+    "vuepress": "^1.3.0",
+    "vuepress-plugin-git-log": "^1.0.1"
   },
   "devDependencies": {
     "typescript": "^3.7.5",
