--- a/site/package.json
+++ b/site/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "typescript": "^3.7.5",
+    "vuepress-plugin-nprogress": "^1.1.6",
     "vuepress-plugin-typescript": "^0.1.2"
   }
 }
