--- a/site/package.json
+++ b/site/package.json
@@ -27,7 +27,8 @@
     "@vssue/vuepress-plugin-vssue": "^1.4.2",
     "dotenv": "^8.2.0",
     "vuepress": "^1.3.0",
-    "vuepress-plugin-git-log": "^1.0.1"
+    "vuepress-plugin-git-log": "^1.0.1",
+    "vuepress-plugin-reading-progress": "^1.0.8"
   },
   "devDependencies": {
     "typescript": "^3.7.5",
