--- a/site/package.json
+++ b/site/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "typescript": "^3.7.5",
     "vuepress-plugin-nprogress": "^1.1.6",
+    "vuepress-plugin-reading-time": "^0.1.1",
     "vuepress-plugin-typescript": "^0.1.2"
   }
 }
