--- a/site/package.json
+++ b/site/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "node --max_old_space_size=8192 ./node_modules/vuepress/cli.js build",
     "build-old": "vuepress build",
+    "debug": "node --nolazy --max_old_space_size=8192 --inspect-brk=9229 ./node_modules/vuepress/cli.js build",
     "dev": "node --max_old_space_size=8192 ./node_modules/vuepress/cli.js dev"
   },
   "repository": {
