--- a/site/package.json
+++ b/site/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "description": "Zumasys Documentation",
   "scripts": {
-    "build": "node --max_old_space_size=8192 ./node_modules/vuepress/cli.js build",
-    "build-old": "vuepress build",
+    "build": "node --max_old_space_size=8192 ./node_modules/vuepress/cli.js build -w 8",
+    "build-old": "vuepress build -w 8",
     "debug": "node --nolazy --max_old_space_size=8192 --inspect-brk=9229 ./node_modules/vuepress/cli.js build",
     "dev": "node --max_old_space_size=8192 ./node_modules/vuepress/cli.js dev"
   },
