--- a/site/.env.skel
+++ b/site/.env.skel
@@ -1,28 +1,12 @@
 #
-# IF YOU MODIFY VARIABLES IN THIS FILE, UPDATE THEM IN /ci/env.ci.skel AS WELL
+# IF YOU MODIFY VARIABLES IN THIS FILE, UPDATE THEM IN /docs/env.skel AS WELL
 #
 
-# The url of the azure functions to fetch profiles from
-VUE_APP_SERVICE_URL=
+# Github API v3 access (client id)
+VUE_APP_GITHUB_CLIENT_ID=
 
-# The key to access the azure functions
-VUE_APP_SERVICE_KEY=
+# Github API v3 access (client secret)
+VUE_APP_GITHUB_CLIENT_SECRET=
 
-# The tenant (application) id of the B2C instance for authentication
-VUE_APP_B2C_CLIENT_ID=
-
-# The url of the authority to authenticate against 
-# (i.e. https://company.b2clogin.com/..., https://login.microsoft.com/company-id/..., etc)
-VUE_APP_B2C_AUTHORITY_URL=
-
-# The url of the authority for when the user has forgotten their password
-VUE_APP_B2C_RESET_PASSWORD_URL=
-
-# The url B2C will redirect to after microsoft login
-VUE_APP_B2C_REDIRECT_URI=
-
-# The url B2C service will redirect to after token authentication
-VUE_APP_B2C_LOGIN_REDIRECT=
-
-# The API scope to request
-VUE_APP_B2C_SCOPE=
+# Google Tag Manager idnetifier
+VUE_APP_GOOGLE_TAG_MANAGER=
