--- a/site/package.json
+++ b/site/package.json
@@ -27,13 +27,15 @@
     "@vssue/api-github-v3": "^1.4.0",
     "@vssue/vuepress-plugin-vssue": "^1.4.2",
     "dotenv": "^8.2.0",
+    "i": "^0.3.6",
     "vuepress": "^1.3.1",
+    "vuepress-bar": "^0.2.3",
     "vuepress-plugin-code-copy": "^1.0.6",
     "vuepress-plugin-git-log": "^1.0.1",
     "vuepress-plugin-reading-progress": "^1.0.8"
   },
   "devDependencies": {
-    "typescript": "^3.8.2",
+    "typescript": "^3.8.3",
     "vuepress-plugin-nprogress": "^1.1.6",
     "vuepress-plugin-reading-time": "^0.1.1",
     "vuepress-plugin-seo": "^0.1.2",
