Add Algolia Search

--- a/site/.env.skel
+++ b/site/.env.skel
@@ -10,3 +10,9 @@ VUE_APP_GITHUB_CLIENT_SECRET=
 
 # Google Tag Manager idnetifier
 VUE_APP_GOOGLE_TAG_MANAGER=
+
+# Algolia Search API Key
+VUE_APP_ALGOLIA_API_KEY=
+
+# Algolia Search Index Name
+VUE_APP_ALGOLIA_INDEX_NAME=
