--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ env:
   AZURE_INDEX_DOCUMENT_NAME: "index.html"
   AZURE_ERROR_DOCUMENT_NAME: ""
   NODE_VERSION: "10.x"
-  SOURCE_DIR: "./vuepress/dist"
+  SOURCE_DIR: "./site/vuepress/dist"
   VUE_APP_GITHUB_CLIENT_ID: ${{ secrets.VUE_APP_GITHUB_CLIENT_ID }}
   VUE_APP_GITHUB_CLIENT_SECRET: ${{ secrets.VUE_APP_GITHUB_CLIENT_SECRET }}
   VUE_APP_GOOGLE_TAG_MANAGER: ${{ secrets.VUE_APP_GOOGLE_TAG_MANAGER }}
@@ -29,6 +29,7 @@ jobs:
       - name: "npm install, build, and test"
         run: |
           # Build and test the project
+          cd site
           npm install
           npm run build --if-present
           npm run test --if-present
