Update config to use .env as prod environment variables. Update env.skel and readme

--- a/site/.env.skel
+++ b/site/.env.skel
@@ -2,10 +2,10 @@
 # IF YOU MODIFY VARIABLES IN THIS FILE, UPDATE THEM IN /docs/env.skel AS WELL
 #
 
-# Github API v3 access (client id)
+# Github OAuth access (client id)
 VUE_APP_GITHUB_CLIENT_ID=
 
-# Github API v3 access (client secret)
+# Github OAuth access (client secret)
 VUE_APP_GITHUB_CLIENT_SECRET=
 
 # Google Tag Manager idnetifier
