--- a/site/package.json
+++ b/site/package.json
@@ -33,7 +33,8 @@
     "vuepress-bar": "^0.2.4",
     "vuepress-plugin-code-copy": "^1.0.6",
     "vuepress-plugin-git-log": "^1.0.1",
-    "vuepress-plugin-reading-progress": "^1.0.9"
+    "vuepress-plugin-reading-progress": "^1.0.9",
+    "vuepress-plugin-sitemap": "^2.3.1"
   },
   "devDependencies": {
     "typescript": "^3.8.3",
