--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
           npm run build --if-present
           npm run test --if-present
       - name: "Deploy to Azure Storage"
-        uses: lauchacarro/Azure-Storage-Action@master
+        uses: lauchacarro/Azure-Storage-Action@v1.0
         with:
           enabled-static-website: "true"
           folder: ${{ env.SOURCE_DIR }}
