--- a/site/package.json
+++ b/site/package.json
@@ -3,11 +3,8 @@
   "version": "1.0.0",
   "description": "Zumasys Documentation",
   "scripts": {
-    "build": ".vuepress/scripts/build.sh",
-    "build-old": "node --max_old_space_size=8192 ./node_modules/vuepress/cli.js build",
-    "build-older": "vuepress build",
-    "debug": "node --nolazy --max_old_space_size=8192 --inspect-brk=9229 ./node_modules/vuepress/cli.js build",
-    "dev": "node --max_old_space_size=8192 ./node_modules/vuepress/cli.js dev"
+    "build": "vuepress build",
+    "dev": "vuepress dev"
   },
   "repository": {
     "type": "git",
@@ -25,19 +22,19 @@
   },
   "homepage": "https://github.com/zumasys/docs#readme",
   "dependencies": {
-    "@vuepress/plugin-google-analytics": "^1.5.4",
+    "@vuepress/plugin-google-analytics": "^2.0.0",
     "dotenv": "^16.0.3",
-    "vuepress": "^1.5.4",
+    "vuepress": "^2.0.0",
     "vuepress-bar": "^0.4.4",
-    "vuepress-plugin-code-copy": "^1.0.6",
+    "vuepress-plugin-code-copy": "^2.0.0",
     "vuepress-plugin-git-log": "^1.0.1",
-    "vuepress-plugin-reading-progress": "^1.0.10",
-    "vuepress-plugin-sitemap": "^2.3.1"
+    "vuepress-plugin-reading-progress": "^2.0.0",
+    "vuepress-plugin-sitemap": "^2.0.0"
   },
   "devDependencies": {
     "typescript": "^4.9.3",
-    "vuepress-plugin-nprogress": "^1.1.8",
-    "vuepress-plugin-reading-time": "^0.1.1",
-    "vuepress-plugin-typescript": "^0.3.1"
+    "vuepress-plugin-nprogress": "^2.0.0",
+    "vuepress-plugin-reading-time": "^2.0.0",
+    "vuepress-plugin-typescript": "^2.0.0"
   }
 }
