--- a/site/package.json
+++ b/site/package.json
@@ -22,18 +22,11 @@
   },
   "homepage": "https://github.com/zumasys/docs#readme",
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "vuepress": "^2.0.0",
-    "vuepress-bar": "^0.4.4",
-    "vuepress-plugin-code-copy": "^2.0.0",
-    "vuepress-plugin-git-log": "^1.0.1",
-    "vuepress-plugin-reading-progress": "^2.0.0",
-    "vuepress-plugin-sitemap": "^2.0.0"
+    "vuepress": "^2.0.0-rc.23"
   },
   "devDependencies": {
-    "typescript": "^4.9.3",
-    "vuepress-plugin-nprogress": "^2.0.0",
-    "vuepress-plugin-reading-time": "^2.0.0",
-    "vuepress-plugin-typescript": "^2.0.0"
+    "@vuepress/bundler-vite": "^2.0.0-rc.23",
+    "@vuepress/theme-default": "^2.0.0-rc.108",
+    "sass-embedded": "^1.89.2"
   }
 }
