--- a/site/package.json
+++ b/site/package.json
@@ -7,7 +7,8 @@
     "build-old": "node --max_old_space_size=8192 ./node_modules/vuepress/cli.js build",
     "build-older": "vuepress build",
     "debug": "node --nolazy --max_old_space_size=8192 --inspect-brk=9229 ./node_modules/vuepress/cli.js build",
-    "dev": "node --max_old_space_size=8192 ./node_modules/vuepress/cli.js dev"
+    "dev": "node --max_old_space_size=8192 ./node_modules/vuepress/cli.js dev",
+    "validate-links": "node ../scripts/validate-links/index.js"
   },
   "repository": {
     "type": "git",
