--- a/site/package.json
+++ b/site/package.json
@@ -26,7 +26,6 @@
   },
   "homepage": "https://github.com/zumasys/docs#readme",
   "dependencies": {
-    "dotenv": "^16.0.3",
     "vuepress": "^1.5.4",
     "vuepress-bar": "^0.4.4",
     "vuepress-plugin-code-copy": "^1.0.6",
@@ -35,6 +34,7 @@
     "vuepress-plugin-sitemap": "^2.3.1"
   },
   "devDependencies": {
+    "image-webpack-loader": "^7.0.1",
     "typescript": "^4.9.3",
     "vuepress-plugin-nprogress": "^1.1.8",
     "vuepress-plugin-reading-time": "^0.1.1",
